Agregue las imagenes, y las distintas clases para cada boton asi sea mas vistoso, debo corregir unos margenes y algunos tamaños de fotos ya que las recorte a ojo

--- a/index.html
+++ b/index.html
@@ -4,12 +4,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Signos zoodiacales</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
-    
+    <div class="container-fluid">
+        
+        <nav class="navbar bg-light mb-2 ">
+            <div class="container-fluid">
+              <a class="navbar-brand fs-3">Signos del zoodiaco</a>
+              <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Buscar</button>
+              </form>
+            </div>
+          </nav>
+
+            <div class="d-flex flex-wrap justify-content-center align-content-center">
+                <button class="btn btn-image" type="button"><img src="/images/signos/aquarius.jpg" id="aquarius" alt="signo aquarius"></button> 
+
+                <button class="btn btn-image" type="button"><img src="/images/signos/cancer.jpg" id="cancer" alt="signo cancer"></button> 
+
+                <button class="btn btn-image" type="button"><img src="/images/signos/aries.jpg" id="aries" alt="signo aries"></button> 
+
+                <button class="btn btn-image" type="button"><img src="/images/signos/capricornio.jpg" id="capricornio" alt="signo capricornio"></button> 
+
+                <button class="btn btn-image" type="button"><img src="/images/signos/geminis.jpg" id="geminis" alt="signo geminis"></button> 
+
+                <button class="btn btn-image" type="button"><img src="/images/signos/leo.jpg" id="leo" alt="signo leo"></button> 
+
+                <button class="btn btn-image" type="button"><img src="/images/signos/libra.jpg" id="libra" alt="signo libra"></button> 
+
+                <button class="btn btn-image" type="button"><img src="/images/signos/piscis.jpg" id="piscis" alt="signo piscis"></button> 
+
+                <button class="btn btn-image" type="button"><img src="/images/signos/sagitario.jpg" id="sagitario" alt="signo sagitario"></button> 
+
+                <button class="btn btn-image" type="button"><img src="/images/signos/scorpio.jpg" id="scorpio" alt="signo scorpio"></button> 
+
+                <button class="btn btn-image" type="button"><img src="/images/signos/taurus.jpg" id="taurus" alt="signo taurus"></button> 
+
+                <button class="btn btn-image" type="button"><img src="/images/signos/virgo.jpg" id="virgo" alt="signo virgo"></button> 
+            </div>
+
+            <footer class="bg-dark text-light py-4 text-center">
+                <p>&copy; Todos los derechos reservados</p>
+            </footer>
+    </div>
+       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
