--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           </nav>
 
             <div class="d-flex flex-wrap justify-content-center align-content-center">
+
                 <button class="btn btn-image" type="button"><img src="/images/signos/aquarius.jpg" id="aquarius" alt="signo aquarius"></button> 
 
                 <button class="btn btn-image" type="button"><img src="/images/signos/cancer.jpg" id="cancer" alt="signo cancer"></button> 
@@ -57,5 +58,8 @@
             </footer>
     </div>
        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+       <script src="/js/app.js"></script>
+       <script src="https://cdn.jsdelivr.net/npm/uuid@latest/dist/umd/uuidv4.min.js"></script>
+    <script src="./js/modales.js" type="module"></script>
 </body>
 </html>
