Cambie un poco los estilos de los links de los elementos, y agregue a que elemento pertenece cada signo en una card

--- a/index.html
+++ b/index.html
@@ -38,13 +38,17 @@
              ELEMENTOS
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" id="fuego">Fuego</a></li>
-              <li><a class="dropdown-item" id="tierra">Tierra</a></li>
-              <li><a class="dropdown-item" id="aire">Aire</a></li>
-              <li><a class="dropdown-item" id="agua">Agua</a></li>        
+              <li><a class="dropdown-item btn-element" id="fuego">Fuego</a></li>
+              <li><a class="dropdown-item btn-element" id="tierra">Tierra</a></li>
+              <li><a class="dropdown-item btn-element" id="aire">Aire</a></li>
+              <li><a class="dropdown-item btn-element" id="agua">Agua</a></li>        
             </ul>
           </li>
         </ul>
+
+        <div class="card d-none">
+          
+        </div>
 
         <form class="d-flex" role="search">
           <input class="form-control me-2 p-1" type="search" placeholder="Ingresar fecha de nacimiento" aria-label="Search">
