Agrego un par de detalles

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="offcanvas-body">
         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">      
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle mb-2" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle mb-2" id="btn-elementos" role="button" data-bs-toggle="dropdown" aria-expanded="false">
              ELEMENTOS
             </a>
             <ul class="dropdown-menu">
