Corrijo el boton del offcanvas que se mantenia activo cuando lo presionaba

--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
     <nav class="navbar bg-light mb-3" id="nav">
   <div class="container-fluid">
     <div class="d-flex">
-      <button class="navbar-toggler me-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+      <button class="navbar-toggler me-3 btn-canvas" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
         <span class="navbar-toggler-icon btn-canvas"></span>
       </button>
     <a class="navbar-brand fs-3">Signos del zoodiaco</a> 
     </div>
+
     <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
       <div class="offcanvas-header">
         <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Otras caracteristicas</h5>
@@ -51,8 +52,6 @@
         <div class="card d-none cartaElementos">
           
         </div>
-
-        
       </div>
     </div>
   </div>
