--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       </div>
       <div class="offcanvas-body">
         <form class="d-flex mb-2" role="search">
-          <input class="form-control me-2 p-1" type="search" placeholder="Ingresar fecha de nacimiento" aria-label="Search">
-          <button class="btn btn-outline-dark" type="submit">¿Que signo soy?</button>
+          <input class="form-control me-2 p-1" id="fecha" type="search" placeholder="Ingresar fecha de nacimiento" aria-label="Search">
+          <button class="btn btn-outline-dark" id="btn-qSigno" type="button">¿Que signo soy?</button>
         </form>
         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">      
           <li class="nav-item dropdown">
@@ -116,5 +116,6 @@
        <script src="/js/app.js"></script>
        <script src="https://cdn.jsdelivr.net/npm/uuid@latest/dist/umd/uuidv4.min.js"></script>
     <script src="https://kit.fontawesome.com/f9598fe670.js" crossorigin="anonymous"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
